[workspace]
members = ["crates/*"]
default-members = ["crates/sas-lexer", "crates/sas-lexer-macro"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.74"
repository = "https://github.com/mishamsk/sas-lexer"
authors = ["Mike Perlov <mishamsk@gmail.com>"]
version = "1.0.0-beta.4"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["sas", "lexer", "parser"]
categories = ["development-tools", "parsing"]

[workspace.dependencies]
sas-lexer = { path = "crates/sas-lexer" }
sas-lexer-macro = { path = "crates/sas-lexer-macro", version = "0.1.1" }

criterion = { version = "0.5.1", features = ["html_reports"] }
pprof = { version = "0.13.0", features = [
    "protobuf-codec",
    "flamegraph",
    "criterion",
] }
insta = { version = "1.39.0", features = ["yaml"] }
phf = { version = "0.11.2", features = ["macros"] }
rmp-serde = "1.3.0"
rstest = "0.22.0"
rustc_version = "0.4"
serde = { version = "1.0.204", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
walkdir = "2.5.0"
zip = "2.2.0"

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
# allowed pedantic lints
module_name_repetitions = "allow"
single_match_else = "allow"
comparison_chain = "allow"
needless_continue = "allow"
# Disallowed restriction lints
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
get_unwrap = "warn"
unwrap_used = "warn"
indexing_slicing = "deny"

[profile.release]
debug = true
codegen-units = 3
lto = "thin"

# use release-like profile for all dependencies
[profile.dev.package."*"]
inherits = "release"
debug = true
incremental = true
codegen-units = 3

[workspace.metadata.typos]
default.extend-ignore-identifiers-re = ["(?i)KWM[a-z0-9_]+"]
# One comment for TokenType
default.extend-ignore-words-re = ["LOWCASE"]
# One test with nOt in that specific case
default.extend-words = { "Ot" = "Ot" }

[workspace.metadata.release]
sign-commit = true
sign-tag = true
allow-branch = ["main", "!HEAD"]
