[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "sas-lexer"
version = "1.0.0-beta.2"
description = "Ultra fast correct context-aware \"parsing\" SAS code lexer"
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = "AGPL-3.0-or-later"
authors = [{ name = "Mike Perlov", email = "mishamsk@gmail.com" }]
urls = { homepage = "https://github.com/mishamsk/sas-lexer", repository = "https://github.com/mishamsk/sas-lexer", Issues = "https://github.com/mishamsk/sas-lexer/issues" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = ["msgspec>=0.18.0"]

[dependency-groups]
dev = [
    "prek>=0.2.25,<0.3",
    "py-anycase>=0.1.0,<0.2",
    "pytest>=9.0.2,<9.1",
    "ruff>=0.14.10,<0.15",
    "ty>=0.0.8",
    "uv>=0.9.18,<0.10",
]

[tool.maturin]
manifest-path = "crates/sas-lexer-py/Cargo.toml"
module-name = "sas_lexer._sas_lexer_rust"
python-source = "src"
strip = true
profile = "release"
features = ["pyo3/extension-module"]
include = [{ path = "LICENSE", format = "sdist" }]
exclude = [
    { path = "Cargo.lock", format = "sdist" },
    { path = "Cargo.toml", format = "sdist" },
]

[tool.uv]
cache-keys = [{ file = "crates/sas-lexer-py/Cargo.toml" }]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "FBT",
    "I",    # isort
    "B",    # bugbear
    "N",
    "PERF",
    "SLF",
    "PTH",
    "TC",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RUF",
]
ignore = [
    "E501",    # line too long, handled by ruff format
    "PLC0105", # We are ok with TypeVars without variance in name
]
